<resources>
    <string name="app_name">HomeMadeProducts</string>
    <string name="login">Login</string>
    <string name="notsigned"><u>Sign Up Now!</u></string>
    <string name="select_image">Select Image From Gallery/ Camera</string>
    <string name="title">Enter Store Name</string>
    <string name="description">description</string>
    <string name="description_store">Write a Brief description about your store max 100 characters</string>
    <string name="submit">CreateYourStore</string>
    <string name="enter_item_name">Enter Item name</string>
    <string name="enter_item_price_in_egp">Enter Item Price In EGP</string>
    <string name="enter_number_of_copies">Enter number of copies</string>
    <string name="enter_production_date">Enter Production Date</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_picker">Select Camera or Gallery</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="choose_newsfeed_or_products">choose NewsFeed or Products</string>
    <string name="create_product">Create product</string>
    <string name="add_shiping_time_in_days">Add shiping time in days</string>
    <string name="write_caption">Write caption</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="_0_00egp">0.00EGP</string>
    <string name="_1">1</string>
    <string name="cancel">cancel</string>
    <string name="ok">ok</string>
    <string name="itemsCount">0</string>
    <string name="total">Total :</string>
    <string name="choose_subcategory">Choose SubCategory</string>
    <string name="add_personal_photo_if_you_desire">Add Personal Photo If you desire</string>
    <string name="update_profile">Update Profile</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_mobile_number">Enter Your Mobile Number</string>
    <string name="update_info">Update Info</string>
    <string name="todo">TODO</string>
    <string name="hahahahah">hahahahah</string>
    <string name="enter_your_store_description">Enter Your Store Description</string>
    <string name="update_store_info">Update Store Info</string>
    <string name="update_store_photo">Update Store Photo</string>
    <string name="don_t_have_a_store">Don\'t have a store</string>
    <string name="view_requested_orders">View Requested Orders</string>
    <string name="orders_id">Order ID :</string>
    <string name="orders_date">Order Date :</string>
    <string name="order_total_price">Order Total Price :</string>
    <string name="order_status_string">Order Status :</string>
    <string name="update_order_status">Update Order Status</string>
    <string name="food">Food</string>
    <string name="toys">Toys</string>
    <string name="books">Books</string>
    <string name="clothes">Clothes</string>
    <string name="out_of_stock">Out Of Stock</string>
    <string name="timeline">TimeLine</string>
    <string name="HomePageLabel">HomePage</string>
    <string name="search_for_products_or_stores">Search for products or stores</string>
    <string name="please_wait_photos_are_loading">Please wait photos are loading</string>
    <string name="my_store">My Store</string>
    <string name="create_your_store_now">Create Your Store Now</string>
    <string name="edit_store_mode">Edit Store Mode:</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="edit_item">Edit item</string>
    <string name="stores">Stores</string>
    <string name="order_details">Order Details</string>
    <string name="all_orders">All Orders</string>
    <string name="add_post_to_newsfeed">Add Post to newsFeed</string>
    <string name="on_delivery">On Delivery</string>
    <string name="delivered">Delivered</string>
    <string name="rejected">Rejected</string>
    <string name="accepted">Accepted</string>
    <string name="pending">Pending</string>
    <string name="msg_token_fmt">hahaha</string>
    <string name="edit_post">Edit Post</string>


    <string-array name="Order_Status">
        <item>Pending</item>
        <item>Accepted</item>
        <item>Rejected</item>
        <item>Delivered</item>
        <item>On Delivery</item>
    </string-array>

    <string-array name="All_Order_Status">
        <item>All</item>
        <item>Pending</item>
        <item>Accepted</item>
        <item>Rejected</item>
        <item>Delivered</item>
        <item>On Delivery</item>

    </string-array>
</resources>