<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AllStores.CategoriesFilter.MainCategoriesFragment">



<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".AllStores.CategoriesFilter.MainCategoriesFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_height="20dp"
                android:layout_width="20dp"
                android:id="@+id/back"
                android:src="@drawable/ic_arrow"
                android:layout_centerVertical="true"

                />
            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                android:gravity="top|center"
                android:text="Choose Main Category"
                android:textColor="@android:color/white"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>





    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center"

      app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="#F5F5F5"
        android:id="@+id/buttonAccessories"

        android:text="Accessories"
        android:textSize="32sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:drawableEnd="@drawable/ic_accessories"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center"

       app:layout_constraintTop_toBottomOf="@+id/buttonAccessories"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="#F5F5F5"
        android:id="@+id/buttonFood"

        android:text="@string/food"
        android:textSize="32sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:drawableEnd="@drawable/ic_food"
        />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center"

        app:layout_constraintTop_toBottomOf="@+id/buttonFood"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="#F5F5F5"
        android:id="@+id/buttonJewellery"

        android:text="Jewellery"
        android:textSize="32sp
"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:drawableEnd="@drawable/ic_diamond"
        />




    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center"

        app:layout_constraintTop_toBottomOf="@+id/buttonJewellery"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="#F5F5F5"
        android:id="@+id/buttonToys"

        android:text="@string/toys"
        android:textSize="32sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:drawableEnd="@drawable/ic_toys"
        />



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center"

        app:layout_constraintTop_toBottomOf="@+id/buttonToys"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="#F5F5F5"
        android:id="@+id/buttonBooks"

        android:text="@string/books"
        android:textSize="32sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:drawableEnd="@drawable/ic_book"
        />



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center"

        app:layout_constraintTop_toBottomOf="@+id/buttonBooks"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="#F5F5F5"
        android:id="@+id/buttonHomeCrafts"

        android:text="HomeCrafts"
        android:textSize="32sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:drawableEnd="@drawable/ic_porcelain"
        />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center"

        app:layout_constraintTop_toBottomOf="@+id/buttonHomeCrafts"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="#F5F5F5"
        android:id="@+id/buttonClothes"

        android:text="@string/clothes"
        android:textSize="32sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:drawableEnd="@drawable/ic_clothes"
        />



</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
